--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,43 +1,163 @@
 *{
     margin: 0;
-    background-color: grey;
-    text-align:center ;
 }
-body{
-    background-color: white;
-    font-size: large;
-}
-h1, h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: black;
-    color: white;
+
+.R1{
     text-align: center;
+    width: 100%;
+    height: 6.5vh;
+    left: 0px;
+    top: 45.2px;
+    background: #D9D9D9;
+    margin-bottom: 43px;
+    font-family: 'Inter';
+    font-style: normal;
+
 }
-h2{
-    background-color: grey;
+.imagen{
+    padding-bottom: 21.22px;
 }
-#imagen{
-    background-color: grey;
-    text-align: center;
-    padding-top: 5px;
+
+.imagen img{
+    width: 22.6vw;     
+    height: 47.2vh; 
+    border-radius: 17px;
+    left: 100.69px;
+    top: 106.38px;
 }
-li{
-    list-style: none;
+
+.BigMomma{
+    display: flex;
+    justify-content: space-around;
 }
-#conocimientos{
-    padding-bottom: 10px;
+
+.texto{
+    background-color: #C3C3C3;
+    border-radius: 17px;
+    text-align: left;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    width: 49.6vw;     
+    height: 81.94vh;
 }
-ul{
-    margin: 0;
+.texto h2{
+    padding-left: 14px;
+    padding-bottom: 14px;
+    text-decoration-line: underline;
 }
-#DPnombre{
-    padding-top: 10px;
+.texto li{
+    padding-bottom: 27px;
 }
-#messientomal{
-    border-radius: 5%;
-    border: solid 5px;
+
+.links{
+    background-color: #C3C3C3;
+    border-radius: 17px;
+    display: flex;
+    justify-content: center;
+    width: 15.7vw;     
+    height: 31.66vh;
 }
-li{
-    padding-bottom: 5px;
+
+.links-ul{
+    list-style-type: none;
+    padding: 0px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.links li a{
+    list-style-type: none;
+    color: black;
+    text-decoration: none;
+}
+
+.fotocontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+footer{
+    background: #D9D9D9;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 15px;
+}
+.Boton{
+    background: #d2d24d;
+    border-radius: 25px;
+    width: 130px;
+    height: 30px;
+}
+
+
+@media (max-width:768px) {
+    .imagen img{
+        width: 35vw;     
+        height: 47.2vh; 
+        border-radius: 17px;
+        left: 100.69px;
+        top: 106.38px;}
+
+    .links{
+        width: 25vw;     
+        height: 31.66vh;
+    }
+
+    
+}
+
+@media (max-width: 425px) {
+    .texto{
+        font-size: 14px;
+        align-items: center;
+        margin-left: 90px;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 49.6vw;     
+        height: 50vh;
+    }
+
+    .fotocontainer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .BigMomma{
+        flex-direction: column;
+    }
+
+    .imagen img{
+        width: 150px;     
+        height: 150px; 
+    }
+
+    .links{
+        width: 150px;     
+        height: 150px; 
+        margin-bottom: 11px;
+    }
+
+    .R1{
+        font-size: 10px;
+        text-align: center;
+    }
+    .imagen{
+        padding-bottom: 10px;
+    }
+    .texto li{
+        padding: 0 0 0 0;
+    }
 }
 
