--- a/StylesCompetencia.css
+++ b/StylesCompetencia.css
@@ -85,12 +85,14 @@
     align-items: center;
 }
 footer{
+    display: flex;
     background: #D9D9D9;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 15px;
+    justify-content: end;
 }
 .Boton{
     background: #f747cb;
