--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,11 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 15px;
-    justify-content: end;
+    height: 25px;
+    justify-content: space-between;
+    text-decoration: none;
+    align-items: center;
+    color: black
 }
 .Boton{
     background: #f747cb;
